syntax = "proto3";

package star_types;

import "access_path.proto";

message ChangeOp {
    types.AccessPath access_path = 1;
    repeated FieldChange field_changes = 2;
}

message ChangeOpType {
    oneof change_type {
        EmptyArg None = 1;
        uint64 Plus = 2;
        uint64 Minus = 3;
        bytes Update = 4;
        EmptyArg Deletion = 5;
    }
}

message EmptyArg {}

message ChangeSet {
    repeated ChangeOp changes = 1;
}

message FieldChange {
    bytes accesses = 1;
    ChangeOpType change_type = 2;
}